@@ -4,7 +4,7 @@ Plugin Name: ScoreRender
 Plugin URI: http://scorerender.abelcheung.org/
 Description: Renders inline music score fragments in WordPress. Heavily based on <a href="http://chris-lamb.co.uk/code/figurerender/">FigureRender</a> from Chris Lamb.
 Author: Abel Cheung
-Version: 0.2.0
+Version: 0.1.99
 Author URI: http://me.abelcheung.org/
 */
 
@@ -163,9 +163,45 @@ function scorerender_get_options ()
 	return;
 }
 
-function parse_input($input)
+function scorerender_get_num_of_images ()
 {
-	return trim (html_entity_decode ($input));
+	global $scorerender_options;
+
+	if (!is_dir ($scorerender_options['CACHE_DIR']) || !is_readable ($scorerender_options['CACHE_DIR']))
+		return -1;
+
+	$count = 0;
+	if ($handle = opendir ($scorerender_options['CACHE_DIR']))
+	{
+		while (false !== ($file = readdir ($handle)))
+		{
+			if (preg_match ('/^[0-9A-Fa-f]{32}\.png$/', $file))
+				$count++;
+		}
+		closedir ($handle);
+	}
+	return $count;
+}
+
+function scorerender_remove_cache ()
+{
+	global $scorerender_options;
+
+	if (!is_dir ($scorerender_options['CACHE_DIR']) ||
+	    !is_readable ($scorerender_options['CACHE_DIR']) ||
+	    !is_writable ($scorerender_options['CACHE_DIR']))
+		return;
+
+	if ($handle = opendir ($scorerender_options['CACHE_DIR']))
+	{
+		while (false !== ($file = readdir ($handle)))
+		{
+			// FIXME: how to decide if some image is generated by plugin?
+			if (preg_match ('/^[0-9A-Fa-f]{32}\.png$/', $file))
+				unlink ($scorerender_options['CACHE_DIR'] . DIRECTORY_SEPARATOR . $file);
+		}
+		closedir ($handle);
+	}
 }
 
 function scorerender_generate_html_error ($msg)
@@ -211,8 +247,7 @@ function scorerender_process_result ($result, $input, $render)
 function scorerender_filter ($matches)
 {
 	global $scorerender_options;
-
-	$input = parse_input ($matches[1]);
+	$input = trim (html_entity_decode ($matches[1]));
 
 	// since preg_replace_callback only accepts single function,
 	// we have to check which regex is matched here and create
@@ -406,6 +441,11 @@ function scorerender_admin_options() {
 
 	global $scorerender_options;
 
+	if ( isset($_POST['clear_cache']) && isset($_POST['ScoreRender']) )
+	{
+		scorerender_remove_cache();
+	}
+
 	if ( isset($_POST['Submit']) && isset($_POST['ScoreRender']) )
 	{
 		scorerender_update_options();
@@ -461,7 +501,7 @@ function scorerender_admin_options() {
 			</td>
 		</tr>
 		<tr valign="top">
-			<th scope="row"><?php printf (__('Location of %s %s binary:'), '<a target="_new" href="http://www.imagemagick.net/">ImageMagick</a>', '<code>convert</code>') ?></th>
+			<th scope="row"><?php printf (__('Location of %s binary:'), '<a target="_new" href="http://www.imagemagick.net/"><code>convert</code></a>') ?></th>
 			<td>
 				<input name="ScoreRender[CONVERT_BIN]" class="code" type="text" id="convert_bin" value="<?php echo attribute_escape($scorerender_options['CONVERT_BIN']); ?>" size="40" />
 			</td>
@@ -611,6 +651,21 @@ function scorerender_admin_options() {
 			</td>
 		</tr>
 		</table>
+	</fieldset>
+
+	<fieldset class="options">
+		<legend><?php _e('Status') ?></legend>
+<?php
+		$img_count = scorerender_get_num_of_images();
+		if (-1 == $img_count) {
+			echo "Cache directory is not a readable directory.<br />\n";
+		} else {
+			printf (__ngettext("%d image is cached.\n", "%d images are cached.\n", $img_count), $img_count);
+		}
+?>
+		<p class="submit">
+		<input type="submit" name="clear_cache" value="<?php _e('Clear Cache &raquo;') ?>" <?php if (($img_count <= 0) || !is_dir ($scorerender_options['CACHE_DIR']) || !is_writable ($scorerender_options['CACHE_DIR'])) { echo 'disabled="true"'; } ?> />
+		</p>
 	</fieldset>
 
 	<p class="submit">
