@@ -1,3 +1,9 @@
+2007-05-06  Abel Cheung  <abelcheung@gmail.com>
+
+	* wp-scorerender.php:
+	scorerender_get_num_of_images(), scorerender_remove_cache() - Provide
+	stat of number of cached images, and add button to remove images.
+
 2007-04-14  Abel Cheung  <abelcheung@gmail.com>
 
 	* wp-scorerender.php:
